[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentri"
version = "0.1.0"
description = "CLI security scanner for JWT, HTTP headers, CORS, rate limiting, and dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
sentri = "sentri.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["sentri"]

[tool.hatchling.build.include]
files = [
    "sentri/wordlists/*",
]